#123.log#
mingw32-make -f Makefile.Release
mingw32-make[1]: Entering directory 'E:/CAE'
g++ -c -pipe -fno-keep-inline-dllexport -O2 -std=gnu++11 -frtti -Wall -Wextra -fexceptions -mthreads -DUNICODE -DQT_NO_DEBUG -DQT_PRINTSUPPORT_LIB -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_CORE_LIB -I. -I. -IC:\Qt\Qt5.7.1\5.7\mingw53_32\include -IC:\Qt\Qt5.7.1\5.7\mingw53_32\include\QtPrintSupport -IC:\Qt\Qt5.7.1\5.7\mingw53_32\include\QtWidgets -IC:\Qt\Qt5.7.1\5.7\mingw53_32\include\QtGui -IC:\Qt\Qt5.7.1\5.7\mingw53_32\include\QtANGLE -IC:\Qt\Qt5.7.1\5.7\mingw53_32\include\QtCore -Irelease -IC:\Qt\Qt5.7.1\5.7\mingw53_32\mkspecs\win32-g+o+  -o release\cspline.o cspline\cspline.cpp
cspline\cspline.cpp:7:1: error: prototype for 'Cspline::Cspline(double*, double*, int)' does not match any in class 'Cspline'
 Cspline::Cspline(double* arrayX, double* arrayY, int n)
 ^
In file included from cspline\cspline.cpp:4:0:
cspline\cspline.h:6:7: error: candidates are: constexpr Cspline::Cspline(const Cspline&)
 class Cspline
       ^
cspline\cspline.h:9:3: error:                 Cspline::Cspline()
   Cspline();
   ^
cspline\cspline.cpp:171:47: error: no 'double Cspline::project(double, int)' member function declared in class 'Cspline'
 double Cspline::project(double interpo_x,int n)
                                               ^
Makefile.Release:1920: recipe for target 'release/cspline.o' failed
mingw32-make[1]: *** [release/cspline.o] Error 1
mingw32-make[1]: Leaving directory 'E:/CAE'
Makefile:34: recipe for target 'release' failed
mingw32-make: *** [release] Error 2
